[tool.poetry]
name = "hangman-python"
version = "0.1.0"
description = "jogo da forca."
authors = ["Ezzio Moreira"]
readme = "README.md"
packages = [{include = "hangman_python"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
